--- a/SQLite3.ipynb
+++ b/SQLite3.ipynb
@@ -57,14 +57,14 @@
    "id": "17a12ad5",
    "metadata": {},
    "source": [
-    "#### 시작하기\n",
+    "### 예제로 시작하기\n",
     "- 먼저 sqlite3 불러오기\n",
-    "- 사용 예제_employee.db"
+    "#### 사용 예제 1) employee.db"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b42d49dc",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "9b13042f",
    "metadata": {
     "scrolled": true
@@ -83,10 +83,10 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Connection at 0x7f37f0408730>"
+       "<sqlite3.Connection at 0x7fb00c74cab0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f8be7a0f",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "7ba0676b",
    "metadata": {},
    "outputs": [
@@ -141,6 +141,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(1001, 'Donghyun', 'SOMJANG', 'Development', '2020-04-01 00:00:00.000')\n",
+      "(2001, 'Sol', 'Fairy', 'Marketing', '2020-04-01 00:00:00.000')\n",
+      "(2002, 'Jiyoung', 'Magician', 'Marketing', '2020-04-01 00:00:00.000')\n",
+      "(1002, 'Hyeona', 'Theif', 'Development', '2020-04-01 00:00:00.000')\n",
+      "(1003, 'Soyoung', 'Chief', 'Development', '2020-04-01 00:00:00.000')\n",
+      "(1001, 'Donghyun', 'SOMJANG', 'Development', '2020-04-01 00:00:00.000')\n",
+      "(2001, 'Sol', 'Fairy', 'Marketing', '2020-04-01 00:00:00.000')\n",
+      "(2002, 'Jiyoung', 'Magician', 'Marketing', '2020-04-01 00:00:00.000')\n",
+      "(1002, 'Hyeona', 'Theif', 'Development', '2020-04-01 00:00:00.000')\n",
+      "(1003, 'Soyoung', 'Chief', 'Development', '2020-04-01 00:00:00.000')\n",
       "(1001, 'Donghyun', 'SOMJANG', 'Development', '2020-04-01 00:00:00.000')\n",
       "(2001, 'Sol', 'Fairy', 'Marketing', '2020-04-01 00:00:00.000')\n",
       "(2002, 'Jiyoung', 'Magician', 'Marketing', '2020-04-01 00:00:00.000')\n",
@@ -206,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "a25f328b",
    "metadata": {},
    "outputs": [
@@ -214,6 +224,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "('Sol', 'Marketing')\n",
+      "('Jiyoung', 'Marketing')\n",
+      "('Sol', 'Marketing')\n",
+      "('Jiyoung', 'Marketing')\n",
       "('Sol', 'Marketing')\n",
       "('Jiyoung', 'Marketing')\n",
       "('Sol', 'Marketing')\n",
@@ -248,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "85d84d5b",
    "metadata": {},
    "outputs": [
@@ -256,6 +270,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "('SOMJANG',)\n",
+      "('SOMJANG',)\n",
       "('SOMJANG',)\n",
       "('SOMJANG',)\n",
       "('SOMJANG',)\n",
@@ -284,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "45b73ba1",
    "metadata": {},
    "outputs": [
@@ -557,6 +573,86 @@
        "      <td>Development</td>\n",
        "      <td>2020-04-01 00:00:00.000</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>Donghyun</td>\n",
+       "      <td>SOMJANG</td>\n",
+       "      <td>Development</td>\n",
+       "      <td>2020-04-01 00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>2001</td>\n",
+       "      <td>Sol</td>\n",
+       "      <td>Fairy</td>\n",
+       "      <td>Marketing</td>\n",
+       "      <td>2020-04-01 00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>Jiyoung</td>\n",
+       "      <td>Magician</td>\n",
+       "      <td>Marketing</td>\n",
+       "      <td>2020-04-01 00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>1002</td>\n",
+       "      <td>Hyeona</td>\n",
+       "      <td>Theif</td>\n",
+       "      <td>Development</td>\n",
+       "      <td>2020-04-01 00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>1003</td>\n",
+       "      <td>Soyoung</td>\n",
+       "      <td>Chief</td>\n",
+       "      <td>Development</td>\n",
+       "      <td>2020-04-01 00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>Donghyun</td>\n",
+       "      <td>SOMJANG</td>\n",
+       "      <td>Development</td>\n",
+       "      <td>2020-04-01 00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>2001</td>\n",
+       "      <td>Sol</td>\n",
+       "      <td>Fairy</td>\n",
+       "      <td>Marketing</td>\n",
+       "      <td>2020-04-01 00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>Jiyoung</td>\n",
+       "      <td>Magician</td>\n",
+       "      <td>Marketing</td>\n",
+       "      <td>2020-04-01 00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>1002</td>\n",
+       "      <td>Hyeona</td>\n",
+       "      <td>Theif</td>\n",
+       "      <td>Development</td>\n",
+       "      <td>2020-04-01 00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>1003</td>\n",
+       "      <td>Soyoung</td>\n",
+       "      <td>Chief</td>\n",
+       "      <td>Development</td>\n",
+       "      <td>2020-04-01 00:00:00.000</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -592,10 +688,20 @@
        "26  2001       Sol     Fairy    Marketing  2020-04-01 00:00:00.000\n",
        "27  2002   Jiyoung  Magician    Marketing  2020-04-01 00:00:00.000\n",
        "28  1002    Hyeona     Theif  Development  2020-04-01 00:00:00.000\n",
-       "29  1003   Soyoung     Chief  Development  2020-04-01 00:00:00.000"
+       "29  1003   Soyoung     Chief  Development  2020-04-01 00:00:00.000\n",
+       "30  1001  Donghyun   SOMJANG  Development  2020-04-01 00:00:00.000\n",
+       "31  2001       Sol     Fairy    Marketing  2020-04-01 00:00:00.000\n",
+       "32  2002   Jiyoung  Magician    Marketing  2020-04-01 00:00:00.000\n",
+       "33  1002    Hyeona     Theif  Development  2020-04-01 00:00:00.000\n",
+       "34  1003   Soyoung     Chief  Development  2020-04-01 00:00:00.000\n",
+       "35  1001  Donghyun   SOMJANG  Development  2020-04-01 00:00:00.000\n",
+       "36  2001       Sol     Fairy    Marketing  2020-04-01 00:00:00.000\n",
+       "37  2002   Jiyoung  Magician    Marketing  2020-04-01 00:00:00.000\n",
+       "38  1002    Hyeona     Theif  Development  2020-04-01 00:00:00.000\n",
+       "39  1003   Soyoung     Chief  Development  2020-04-01 00:00:00.000"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,10 +737,364 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fc77381c",
+   "metadata": {},
+   "source": [
+    "#### 사용예제 2) \n",
+    "파이썬에 기본적으로 내장되어 있는 데이터베이스인 sqlite3 모듈를 사용하는 방법 이다.\n",
+    "#### 데이터베이스 접속 \n",
+    "    \n",
+    "sqlite3 내장 모듈을 import 하고, connect 메서드를 통해 커넥션 객체를 생성하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "decf1235",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 메모리 DB 접속 (일회성)\n",
+    "import sqlite3\n",
+    "con = sqlite3.connect(':memorry:')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "90a7f443",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 파일 DB 접속\n",
+    "import sqlite3\n",
+    "con = sqlite3.connect('./test_1.db')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49451e70",
+   "metadata": {},
+   "source": [
+    "- 테이블 생성\n",
+    "\n",
+    "커서 객체를 받아와서 execute 메서드로 CREATE TABLE 쿼리를 전송 한다.\n",
+    "참고적으로 한번 run을 하고 재 실행을 하니 중복된다는 오류코드가 뜸 해결방법은 (DB네임을 바꿔서 새로 만들던가,  DB를 지우던가 둘중 하나)를 해야 한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "67600545",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7fafde9712d0>"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cur = con.cursor()\n",
+    "cur.execute(\"CREATE TABLE PhoneBook(Name text, PhoneNum text);\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04cca6ab",
+   "metadata": {},
+   "source": [
+    "#### 데이터 삽입\n",
+    "\n",
+    "마찬가지로 커서 객체로 작업한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b46468d4",
+   "metadata": {},
+   "source": [
+    "- 기본 String Query 사용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "89403da3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7fafde9713b0>"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cur = con.cursor()\n",
+    "cur.execute(\"INSERT INTO PhoneBook Values('Derick', '010-1234-5678');\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72be5ad9",
+   "metadata": {},
+   "source": [
+    "- Parameter: Tuple 사용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "02573970",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7fafde971340>"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name = 'SangJung'\n",
+    "phoneNumber = '010-5670-2343'\n",
+    "cur = con.cursor()\n",
+    "cur.execute('INSERT INTO PhoneBook VALUES(?, ?);', (name, phoneNumber))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e18a642",
+   "metadata": {},
+   "source": [
+    "- Named Parameter: Dictionary 사용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "b7ea6f5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7fafde971260>"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name = 'SangJung'\n",
+    "phoneNumber = '010-5670-2343'\n",
+    "cur = con.cursor()\n",
+    "cur.execute('INSERT INTO PhoneBook VALUES(:name, :phoneNumber);', {\"name\":name, \"phoneNumber\":phoneNumber})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59ef2035",
+   "metadata": {},
+   "source": [
+    "- List 사용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "457b8982",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7fafde9711f0>"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataList = (('Tom', '010-543-5432'), ('DSP', '010-123-1234'))\n",
+    "cur = con.cursor()\n",
+    "cur.executemany(\"INSERT INTO PhoneBook VALUES(?, ?);\", dataList)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c575352",
+   "metadata": {},
+   "source": [
+    "#### 데이터 조회\n",
+    "커서 객체는 파일 포인터처럼 한 번 읽은 데이터는 다시 읽을 수 없으므로 다시 SELECT 쿼리를 전송해야 함을 주의합니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "257c9055",
+   "metadata": {},
+   "source": [
+    "- 순회 조회"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "afbc05fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Derick', '010-1234-5678')\n",
+      "('SangJung', '010-5670-2343')\n",
+      "('SangJung', '010-5670-2343')\n",
+      "('Tom', '010-543-5432')\n",
+      "('DSP', '010-123-1234')\n"
+     ]
+    }
+   ],
+   "source": [
+    "cur.execute('SELECT * FROM PhoneBook')\n",
+    "for row in cur:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41f49edd",
+   "metadata": {},
+   "source": [
+    "- 단건 조회"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "d2385cd4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Derick', '010-1234-5678')"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cur.execute('SELECT * FROM PhoneBook')\n",
+    "cur.fetchone()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44a86a71",
+   "metadata": {},
+   "source": [
+    "- 다건 조회"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "1cfcbcf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('SangJung', '010-5670-2343'), ('SangJung', '010-5670-2343')]"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cur.fetchmany(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6614df9",
+   "metadata": {},
+   "source": [
+    "- 모두 조회"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "48586954",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Tom', '010-543-5432'), ('DSP', '010-123-1234')]"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cur.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89b1f6b6",
+   "metadata": {},
+   "source": [
+    "<center>\n",
+    "<img src=\"https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FbDCBZZ%2Fbtq4Bx2bdNQ%2FUdbtHkZs1joHPAfocWksz1%2Fimg.png\" width=\"600\" height=\"200\"><br>\n",
+    "</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a8873d2",
+   "metadata": {},
+   "source": [
+    "SQLite3 모듈 사용법을 예제로 하면서 생성된 .db이다. ( 예제 2번을 할때, CREATE문을 사용하고, 두번째 러닝할때는 DB에 이미 있어서 중복에러가 발생했다. 그래서 db네임을 바꿔서 했더니 git status 에서 db를 눈으로 확인 할 수 있었다.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "87d7adff",
    "metadata": {},
    "source": [
-    "- 출처:[솜씨좋은 장씨님 tistory](https://somjang.tistory.com/entry/Python-Python%EC%97%90%EC%84%9C-Sqlite3-%EC%82%AC%EC%9A%A9%ED%95%98%EA%B8%B0)"
+    "- 출처\n",
+    "    - [솜씨좋은 장씨님 tistory](https://somjang.tistory.com/entry/Python-Python%EC%97%90%EC%84%9C-Sqlite3-%EC%82%AC%EC%9A%A9%ED%95%98%EA%B8%B0)\n",
+    "    - [예제로 배우는 파이썬 프로그래밍](http://pythonstudy.xyz/python/article/204-SQLite-%EC%82%AC%EC%9A%A9)\n",
+    "    - [[파이썬] sqlite3 모듈 사용법](https://www.daleseo.com/python-sqlite3/)"
    ]
   }
  ],
