--- a/SQLite3.ipynb
+++ b/SQLite3.ipynb
@@ -58,8 +58,12 @@
    "metadata": {},
    "source": [
     "### 예제로 시작하기\n",
-    "- 먼저 sqlite3 불러오기\n",
-    "#### 사용 예제 1) employee.db"
+    "\n",
+    "\n",
+    "#### 사용 예제 \n",
+    "##### 1) employee.db\n",
+    "\n",
+    "- 먼저 sqlite3 불러오기"
    ]
   },
   {
@@ -737,7 +741,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc77381c",
+   "id": "4448ec5a",
    "metadata": {},
    "source": [
     "#### 사용예제 2) \n",
@@ -750,7 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "decf1235",
+   "id": "56106478",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "90a7f443",
+   "id": "03039dc4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +777,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49451e70",
+   "id": "ec554fba",
    "metadata": {},
    "source": [
     "- 테이블 생성\n",
@@ -785,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "67600545",
+   "id": "b6ac90de",
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +810,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04cca6ab",
+   "id": "33fb85bf",
    "metadata": {},
    "source": [
     "#### 데이터 삽입\n",
@@ -816,7 +820,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b46468d4",
+   "id": "e2382525",
    "metadata": {},
    "source": [
     "- 기본 String Query 사용"
@@ -825,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "89403da3",
+   "id": "3a9b04d3",
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +850,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72be5ad9",
+   "id": "119717ba",
    "metadata": {},
    "source": [
     "- Parameter: Tuple 사용"
@@ -855,7 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "02573970",
+   "id": "3a2838ca",
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +882,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e18a642",
+   "id": "6e165b68",
    "metadata": {},
    "source": [
     "- Named Parameter: Dictionary 사용"
@@ -887,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "b7ea6f5e",
+   "id": "033cf00a",
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +914,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59ef2035",
+   "id": "3c77aaee",
    "metadata": {},
    "source": [
     "- List 사용"
@@ -919,7 +923,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "457b8982",
+   "id": "1b02ed6e",
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +945,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c575352",
+   "id": "04c47799",
    "metadata": {},
    "source": [
     "#### 데이터 조회\n",
@@ -950,7 +954,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "257c9055",
+   "id": "1a54e78d",
    "metadata": {},
    "source": [
     "- 순회 조회"
@@ -959,7 +963,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "afbc05fa",
+   "id": "662483e9",
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +986,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41f49edd",
+   "id": "0ad43943",
    "metadata": {},
    "source": [
     "- 단건 조회"
@@ -991,7 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "d2385cd4",
+   "id": "f69fe864",
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1016,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44a86a71",
+   "id": "04acc80b",
    "metadata": {},
    "source": [
     "- 다건 조회"
@@ -1021,7 +1025,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "1cfcbcf1",
+   "id": "7e80d5ea",
    "metadata": {},
    "outputs": [
     {
@@ -1041,7 +1045,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6614df9",
+   "id": "378232fe",
    "metadata": {},
    "source": [
     "- 모두 조회"
@@ -1050,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "48586954",
+   "id": "e4abb839",
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1074,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89b1f6b6",
+   "id": "d523e94a",
    "metadata": {},
    "source": [
     "<center>\n",
@@ -1080,7 +1084,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a8873d2",
+   "id": "a523c4c2",
    "metadata": {},
    "source": [
     "SQLite3 모듈 사용법을 예제로 하면서 생성된 .db이다. ( 예제 2번을 할때, CREATE문을 사용하고, 두번째 러닝할때는 DB에 이미 있어서 중복에러가 발생했다. 그래서 db네임을 바꿔서 했더니 git status 에서 db를 눈으로 확인 할 수 있었다.)"
