--- a/kaggle_titanic_XGBoost.ipynb
+++ b/kaggle_titanic_XGBoost.ipynb
@@ -30,7 +30,7 @@
     "- Step 1 탐색: 타이타닉 데이터 살펴보기 (생존에 영향을 주는 피처 시각화로 도메인 지식과 비교해보자)\n",
     "- Step 2 데이터처리: 결측치 처리하기\n",
     "- Step 3 데이터나누기\n",
-    "- Step 4 머신러닝 알고리즘 적용하기 (로지스틱 회귀, SVC, 랜덤 포레스트, K-최근접 이웃 알고리즘)\n",
+    "- Step 4 머신러닝 알고리즘 적용하기 (로지스틱 회귀, SVC, 랜덤 포레스트, K-최근접 이웃 알고리즘) + **( XGBoost 21.05.15 추가 )**\n",
     "- Step 5 kaggle 제출하기\n",
     "\n",
     "### Step 0 도메인 지식\n",
@@ -1570,7 +1570,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73810fca",
+   "id": "ced83a00",
    "metadata": {},
    "source": [
     "- XGBoost 사용 / 21.05.15 추가 / 진행했었던 kaggle 타이타닉 에 적용해 봄. 이유는 아래와 같다.\n",
@@ -1582,7 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "a3dc3836",
+   "id": "56012d80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1648,7 +1648,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8ca2c08",
+   "id": "ff79266d",
    "metadata": {},
    "source": [
     "- 렌덤 포레스트(0.98) 보다 아주 조금 떨어지지만 XGBoost(0.96)가 나머지보다는 높은 결과가 나온 것을 확인 할 수 있었다."
