--- a/Chapter_2.1.ipynb
+++ b/Chapter_2.1.ipynb
@@ -5,6 +5,22 @@
    "id": "2d166852",
    "metadata": {},
    "source": [
+    "<center>\n",
+    "<img src=\"http://image.yes24.com/goods/87039632/800x0\" width=\"200\" height=\"200\"><br>\n",
+    "</center>\n",
+    "\n",
+    "\n",
+    " - Github: [yoonkt200](https://github.com/yoonkt200/python-data-analysis)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "# Chapter02 텍스트 마이닝 첫걸음\n",
     "\n",
     "- 이장의 핵심개념\n",
@@ -624,6 +640,14 @@
     "category_corpus = \"\".join(df['category'].tolist())\n",
     "content_corpus = \"\".join(df['content_text'].tolist())\n",
     "print(title_corpus)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5af3f7b6",
+   "metadata": {},
+   "source": [
+    "- 출처: 이것이 데이터 분석이다 with 파이썬"
    ]
   }
  ],
